force-app/main/default/objects/Itinerary_Listing__c/Itinerary_Listing__c.object-meta.xml
<CustomObject>
    <label>Itinerary Listing</label>
    <nameField>
        <label>Itinerary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Itineraries Listing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>