force-app/main/default/objects/Itinerary_Listing__c/fields/IsRequest__c.field-meta.xml
<CustomField>
    <fullName>IsRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRequest</label>
    <type>Checkbox</type>
</CustomField>