force-app/main/default/objects/Itinerary_Listing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Max_Price__c</columns>
    <columns>Min_Price__c</columns>
    <columns>Interest__c</columns>
    <columns>Destination__c</columns>
    <columns>IsRequest__c</columns>
    <columns>Image_Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsRequest__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All</label>
</ListView>